--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -167,8 +167,8 @@ services:
     image: bitnami/spark:latest
     command: bin/spark-class org.apache.spark.deploy.master.Master
     ports:
-      - "9090:8080"
-      - "7077:7077"
+      - "9090:8080" # to access UI of master
+      - "7077:7077" # this port is how master communicate with worker
     networks:
       - confluent
   spark-worker:
